# agentic_chatbot

./: .gitignore  Dockerfile  Dockerfile.lambda  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py
.github/workflows/: deploy.yml
agentic_rag/: __init__.py  agent.py  chunking.py  cli.py  drive_reader.py  exceptions.py  ingest.py  logging_config.py  settings.py  vector_store.py  web_crawler.py
agentic_rag/api/: dependencies.py  main.py  routes_ask.py  routes_health.py  routes_ingest.py  schemas.py
tests/: conftest.py  test_agent.py  test_api.py  test_chunking.py  test_settings.py  test_vector_store.py  test_web_crawler.py
