[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag"
version = "1.0.0"
description = "Agentic RAG bot: ingests Google Drive docs + a website, answers questions via Gemini with grounded retrieval."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "google-api-python-client>=2.140.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "google-genai>=2.0.0",
    "pinecone>=5.0.0",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "pypdf>=4.3.1",
    "python-docx>=1.1.2",
    "lxml>=5.3.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "playwright>=1.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "httpx==0.27.2",
]

[project.scripts]
agentic-rag-ingest = "agentic_rag.ingest:main"
agentic-rag-chat = "agentic_rag.cli:main"

[tool.setuptools.packages.find]
include = ["agentic_rag*"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]  # FastAPI's `Depends()` in argument defaults is idiomatic, not a bug

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
